[gd_scene load_steps=4 format=3 uid="uid://din8xxt7oywta"]

[ext_resource type="Script" path="res://Area2D.gd" id="1_mvu2y"]
[ext_resource type="Texture2D" uid="uid://buoru82ouu8lh" path="res://assets/laser.png" id="2_h5d7t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fd4wk"]
radius = 3.0
height = 48.0

[node name="Bullet" type="Area2D"]
script = ExtResource("1_mvu2y")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_h5d7t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_fd4wk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
